--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" routerLink="/busqueda">Busqueda</a>
+          <a class="nav-link" routerLink="/actor/listado">Listado Actores</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" routerLink="/peliculas/listado">Lista peliculas</a>
+          <a class="nav-link" routerLink="/peliculas/listado">Alta Actor</a>
         </li>
         <!-- <li class="nav-item">
           <a class="nav-link disabled"  tabindex="-1">Disabled</a>
