--- a/src/app/componentes/actor-listado/actor-listado.component.html
+++ b/src/app/componentes/actor-listado/actor-listado.component.html
@@ -1,1 +1,15 @@
-<p>actor-listado works!</p>
+<app-tabla-actor [coleccionActores]="listaActores" (detallesEvent)="traerDetalle($event)" (borrarEvent)="traerBorrar($event)"></app-tabla-actor>
+
+<div class="container">
+    <!-- Example row of columns -->
+    <div class="row">
+      <app-borrar-pelicula [inputElementoBorrar]="elementoBorrar" class="col-md-4" *ngIf="elementoBorrar"></app-borrar-pelicula>
+
+      <app-detalle-pelicula [inputElementoDetalle]="elementoDetalle" class="col-md-4" *ngIf="elementoDetalle"></app-detalle-pelicula>
+
+    </div>
+
+    <hr>
+
+</div>
+
