--- a/src/app/componentes/busqueda/busqueda.component.html
+++ b/src/app/componentes/busqueda/busqueda.component.html
@@ -1,4 +1,4 @@
-<app-tabla-pelicula [coleccionPeliculas]="listaElementos" (detallesEvent)="traerDetalle($event)" (borrarEvent)="traerBorrar($event)"></app-tabla-pelicula>
+<app-tabla-actor [coleccionActores]="listaActores" (detallesEvent)="traerDetalle($event)" (borrarEvent)="traerBorrar($event)"></app-tabla-actor>
 
 <div class="container">
     <!-- Example row of columns -->
