--- a/src/app/componentes/detalle-pelicula/detalle-pelicula.component.html
+++ b/src/app/componentes/detalle-pelicula/detalle-pelicula.component.html
@@ -1,13 +1,13 @@
 <div class="container">
-    <h2>Detalle: </h2>
-    <p class="font-weight-bold">ID: <span class="font-weight-normal">{{id}}</span></p>
+    <h2>Detalles: </h2>
     <p class="font-weight-bold">Nombre: <span class="font-weight-normal">{{nombre}}</span></p>
-    <p class="font-weight-bold">Tipo: <span class="font-weight-normal">{{tipo}}</span></p>
-    <p class="font-weight-bold">Fecha de estreno: <span class="font-weight-normal">{{fecha}}</span></p>
-    <p class="font-weight-bold">Cantidad de publico: <span class="font-weight-normal">{{publico}}</span></p>
+    <p class="font-weight-bold">Apellido: <span class="font-weight-normal">{{apellido}}</span></p>
+    <p class="font-weight-bold">Sexo: <span class="font-weight-normal">{{sexo}}</span></p>
+    <p class="font-weight-bold">Fecha de nacimiento: <span class="font-weight-normal">{{fecha}}</span></p>
+    <p class="font-weight-bold">Nacionalidad: <span class="font-weight-normal">{{nacionalidad}}</span></p>
     <div class="row d-flex mx-auto">
-        <!-- <p class="mt-3 mx-2"><a class="btn btn-secondary"  role="button" (click)="reset()">Limpiar</a></p> -->
-        <p class="mt-3"><a class="btn btn-secondary"  role="button" *ngIf="borrado == 1" (click)="emitirBorrarPelicula(inputElementoDetalle)">Borrar</a></p>
+        <p class="mt-3 mx-2"><a class="btn btn-secondary"  role="button" (click)="reset()">Limpiar</a></p>
+        <!-- <p class="mt-3"><a class="btn btn-secondary"  role="button" (click)="borrar('actores',nombre+' '+apellido)">Borrar</a></p> -->
     </div>
     
 </div>
