--- a/src/app/componentes/peliculas-listado/peliculas-listado.component.html
+++ b/src/app/componentes/peliculas-listado/peliculas-listado.component.html
@@ -1,7 +1,7 @@
 <!-- <app-tabla-pelicula [coleccionPeliculas]="listaElementos" (detallesEvent)="traerDetalle($event)"></app-tabla-pelicula> -->
 <div class="container d-flex justify-content-around" style="margin-top: 10%;">
-        <app-alta-actor class="container-md" [nacionalidad]="paisSeleccionado" ></app-alta-actor>
-        <app-tabla-paises class="container-md" (paisEmitido)="agarrarPais($event)"></app-tabla-paises>
+        <!-- <app-alta-actor class="container-md" [nacionalidad]="paisSeleccionado" ></app-alta-actor> -->
+        <!-- <app-tabla-paises class="container-md" (paisEmitido)="agarrarPais($event)" [listaPaises]="listaPaises"></app-tabla-paises> -->
 </div>
 
 <!-- <div class="row d-flex justify-content-center">
