--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,10 @@
           <a class="nav-link" routerLink="/actor/listado">Listado Actores</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" routerLink="/peliculas/listado">Alta Actor</a>
+          <a class="nav-link" routerLink="/actor/alta">Alta Actor</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/peliculas/alta">Alta Pelicula</a>
         </li>
         <!-- <li class="nav-item">
           <a class="nav-link disabled"  tabindex="-1">Disabled</a>
