--- a/src/app/componentes/tabla-actor/tabla-actor.component.html
+++ b/src/app/componentes/tabla-actor/tabla-actor.component.html
@@ -1,20 +1,27 @@
 <main role="main">
     <div class="jumbotron">
-      
-        <div class="col-md d-flex flex-wrap justify-content-center ">
-          <div class="card m-4 shadow-sm" *ngFor="let actor of coleccionActores">
-            <img src="{{actor.foto}}" alt="" class="card-img-top" style="width: 300px; height: 500px;">
-            <p class="card-text text-center mt-3">{{actor.nombre}} {{actor.apellido}}</p>
-            <div class="card-body d-flex row justify-content-around">
-              <button type="button" class="btn btn-sm btn-outline-secondary" (click)="verDetallesActor(actor)">Detalle</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary" (click)="verBorrarActor(actor)">Borrar</button>
-             <!--  <button type="button" class="btn btn-sm btn-outline-secondary" *ngIf="checkRoute() == '/busqueda'" (click)="verModificarPelicula(pelicula)">Modificar</button> -->
-            </div>
-          </div>
+      <div class="container-md">
+        <h1 class="display-3 text-center">Actores</h1>
+        <!-- <p><a class="btn btn-primary btn-lg" role="button" (click)="cambiarVista()">Cambiar vista</a></p> -->
+        <div class="row overflow-auto" style="max-height: 300px;">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">Nombre</th>
+                <th scope="col">Foto</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let actor of listaActores">
+                <td>{{actor.nombre}} {{actor.apellido}}</td>
+                <td><img [src]="actor.foto" class="" style="width: 100px; height: 150px;"></td>
+                <td><button type="button" class="btn btn-sm btn-outline-secondary" (click)="emitirActor(actor)">Agregar</button></td>
+            </tbody>
+          </table>
         </div>
-      
-    </div>
   
+      </div>
+    </div>
   
   
   </main>
