--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
         <li class="nav-item active">
           <a class="nav-link" routerLink="/actor/actorPelicula">Actor Pelicula</a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/actor/paisPelicula">Pais Pelicula</a>
+        </li>
         <!-- <li class="nav-item">
           <a class="nav-link disabled"  tabindex="-1">Disabled</a>
         </li>
